# FastApiKatalon

./: README.md  pyproject.toml
src/: app.py
src/scrapping/: KatalonDocWebUI.py
