[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["qaship <mathieu.dassie@buyco.co>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
pylint = "^2.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
